--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.2.6",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "^18",
